ADDED BOOTSTRAP NAV

--- a/Omegaapp/src/app/app.component.html
+++ b/Omegaapp/src/app/app.component.html
@@ -1,5 +1,23 @@
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar bg-primary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand">OMEGAS PROMISE</a>
+    <form class="d-flex" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+
+<!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <a class="container-fluid"></a>
     <a class="navbar-brand" href="#">OMEGA'S PROMISE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,15 +53,15 @@
     <div id="omegaCarouselphotos" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/UI/OMEGAapp/src/assets/IMAGES/Summer Images.jpg" class="d-block w-100" alt="...">
+            <img src="/Omegaapp/src/assets/IMAGES/Summer Images.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/UI/OMEGAapp/src/assets/IMAGES/Summer Images 2.jpg" class="d-block w-100" alt="...">
+            <img src="/Omegaapp/src/assets/IMAGES/Summer Images 2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/UI/OMEGAapp/src/assets/IMAGES/Summer Images 3.jpg" class="d-block w-100" alt="...">
+            <img src="/Omegaapp/src/assets/IMAGES/Summer Images 3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
-      </div>
+      </div> -->
 
       <router-outlet></router-outlet>
