ADDING CAROUSEL TO HOMEPAGE

--- a/Omegaapp/src/app/Home/home.component.html
+++ b/Omegaapp/src/app/Home/home.component.html
@@ -1,3 +1,15 @@
 <h1>Home Page</h1>
 
-
+<div id="omegaCarouselphotos" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Omegaapp/src/assets/IMAGES/Summer Images.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/Omegaapp/src/assets/IMAGES/Summer Images 2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/Omegaapp/src/assets/IMAGES/Summer Images 3.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+  </div>
