--- a/Omegaapp/src/app/Home/home.component.html
+++ b/Omegaapp/src/app/Home/home.component.html
@@ -1,5 +1,7 @@
 <h1>Home Page</h1>
 
+
+<div class="carsousel-container">
 <div id="omegaCarouselphotos" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -13,3 +15,4 @@
       </div>
     </div>
   </div>
+</div>
